// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse smoke result should match snapshot for "tracks/" 1`] = `"tracks/"`;

exports[`parse smoke result should match snapshot for "tracks/[:artist::Smith]" 1`] = `
Object {
  "matcher": /\\^tracks\\\\/\\(\\.\\+\\?\\)\\$/,
  "parts": Array [
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /tracks\\\\/\\(\\.\\+\\?\\)/,
      },
      "matching_group": 1,
      "prefix": "tracks/",
      "state": Array [
        "artist",
        "artist",
        "Smith",
      ],
      "state_source": "[:artist::Smith]",
    },
  ],
}
`;

exports[`parse smoke result should match snapshot for "tracks/[:artist::nice%20to%20have%20you)]" 1`] = `
Object {
  "matcher": /\\^tracks\\\\/\\(\\.\\+\\?\\)\\$/,
  "parts": Array [
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /tracks\\\\/\\(\\.\\+\\?\\)/,
      },
      "matching_group": 1,
      "prefix": "tracks/",
      "state": Array [
        "artist",
        "artist",
        "nice to have you)",
      ],
      "state_source": "[:artist::nice%20to%20have%20you)]",
    },
  ],
}
`;

exports[`parse smoke result should match snapshot for "tracks/[:artist:next_value],([:track])" 1`] = `
Object {
  "matcher": /\\^tracks\\\\/\\(\\.\\+\\?\\),\\\\\\(\\(\\.\\+\\?\\)\\\\\\)\\$/,
  "parts": Array [
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /tracks\\\\/\\(\\.\\+\\?\\)/,
      },
      "matching_group": 1,
      "prefix": "tracks/",
      "state": Array [
        "artist",
        "next_value",
        null,
      ],
      "state_source": "[:artist:next_value]",
    },
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /,\\\\\\(\\(\\.\\+\\?\\)/,
      },
      "matching_group": 2,
      "prefix": ",(",
      "state": Array [
        "track",
        "track",
        null,
      ],
      "state_source": "[:track]",
    },
    Object {
      "matcher": Object {
        "has_group": false,
        "regexp": /\\\\\\)/,
      },
      "matching_group": null,
      "prefix": ")",
      "state": null,
      "state_source": null,
    },
  ],
}
`;

exports[`parse smoke result should match snapshot for "tracks/[:artist:next_value],([:track])" 2`] = `"tracks/[:artist],([:track])"`;

exports[`parse smoke result should match snapshot for "tracks/[:artist]" 1`] = `
Object {
  "matcher": /\\^tracks\\\\/\\(\\.\\+\\?\\)\\$/,
  "parts": Array [
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /tracks\\\\/\\(\\.\\+\\?\\)/,
      },
      "matching_group": 1,
      "prefix": "tracks/",
      "state": Array [
        "artist",
        "artist",
        null,
      ],
      "state_source": "[:artist]",
    },
  ],
}
`;

exports[`parse smoke result should match snapshot for "tracks/[:artist],([:track])" 1`] = `"tracks/[:artist],([:track])"`;

exports[`parse smoke result should match snapshot for "tracks/[:artist],[:track]" 1`] = `
Object {
  "matcher": /\\^tracks\\\\/\\(\\.\\+\\?\\),\\(\\.\\+\\?\\)\\$/,
  "parts": Array [
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /tracks\\\\/\\(\\.\\+\\?\\)/,
      },
      "matching_group": 1,
      "prefix": "tracks/",
      "state": Array [
        "artist",
        "artist",
        null,
      ],
      "state_source": "[:artist]",
    },
    Object {
      "matcher": Object {
        "has_group": true,
        "regexp": /,\\(\\.\\+\\?\\)/,
      },
      "matching_group": 2,
      "prefix": ",",
      "state": Array [
        "track",
        "track",
        null,
      ],
      "state_source": "[:track]",
    },
  ],
}
`;
